sass/styles.scss
// Import Bootstrap Compass integration
@import "bootstrap-compass";

// Import custom Bootstrap variables
@import "bootstrap-variables";

// Import Bootstrap for Sass
@import "bootstrap";

p{
	color:rgba(0,0,0,.54);
}

.text-light{
	color:rgba(255,255,255,.78);
}

.text-normal{
	color:rgba(0,0,0,.78);
}

.super-hero{
	padding-top: 100px;
	margin-top:-102px;
	background:url(../img/03olinda-carnival-shopping-mecca-palette-inspriation.jpg) no-repeat left bottom;
}

.portfolio_area{
	padding:80px 0;
	background:url(../img/03olinda-carnival-shopping-mecca-palette-inspriation.jpg) no-repeat center;
}

.donate-or-hire{
	background:url(../img/The-Pelourinho-Salvador-Brazil-11.jpg) no-repeat center;
}
.section_padding_100{
	padding-top: 100px;
    padding-bottom: 100px;
}

/*.tp-dottedoverlay.twoxtwo {
    background: url(../img/gridtile.png);
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0px;
    left: 0px;
    z-index:0;
}*/

.text-blue{
	color:rgb(38, 166, 154);
}

.heading-min{
	font-size: 1.6em;
}

@media(min-width: 320px){
	.super-hero_presentation{
		position: relative;
		z-index: 1;
		display:table-cell;
		vertical-align: middle;
		font-family: 'Anton', Arial, sans-serif;
		color:white;
		overflow: hidden;
	}
	.presentation-wrapper{
		position: absolute;
		width:50%;
	}
	.presentation-title{
		font-size:4em;
	}
	.presentation-excerpt{
		font-size: 2em;
	}
	.call-to-action{
		padding-top: 30px;
    	padding-bottom: 30px;
    	background:rgb(38, 166, 154);
    	font-size: 1.4em;
    	color: rgba(255, 255, 255, .78);
	}

	.feature{
		margin-bottom:20px;
		text-align: center;
	}
	.copyright{
		background: rgb(38, 50, 56);
    	color: rgba(255, 255, 255, .78);
    	padding: 20px 0;
	}
}

@media(min-width:$screen-sm){

	.navbar.navbar-default{
		z-index: 1;
	}

	.navbar-nav > li > a{
		font-family: 'Anton', 'Arial', sans-serif;
		font-size:1.8em;
	}
}

